[gd_scene load_steps=11 format=3 uid="uid://bv2g5wgeeo25m"]

[ext_resource type="Script" path="res://player/player.gd" id="1_hvvt5"]
[ext_resource type="Texture2D" uid="uid://hex5xjx00dbk" path="res://icon.svg" id="2_8l1vb"]
[ext_resource type="Texture2D" uid="uid://dq6vnxt0m1fyx" path="res://assets/light.png" id="3_wr5l3"]
[ext_resource type="PackedScene" uid="uid://bdw2fgswr67pa" path="res://guns/all guns/m_714.tscn" id="4_n12sp"]
[ext_resource type="Script" path="res://player/weapon_manager.gd" id="5_dry04"]
[ext_resource type="PackedScene" uid="uid://bca6c55glm5kd" path="res://components/hitbox_component.tscn" id="6_2322e"]
[ext_resource type="PackedScene" uid="uid://d22hi5vpihhpk" path="res://components/health_component.tscn" id="7_a2ic5"]
[ext_resource type="PackedScene" uid="uid://cns2ljf0fipot" path="res://player/heart/heart.tscn" id="8_qthg5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gfrk3"]
size = Vector2(125, 123)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nefqh"]
size = Vector2(122, 120)

[node name="Player" type="CharacterBody2D" groups=["player"]]
position = Vector2(391, 413)
collision_mask = 2
script = ExtResource("1_hvvt5")
spd = 100
accel = 100
friction = 1
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, -2.5)
shape = SubResource("RectangleShape2D_gfrk3")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_8l1vb")

[node name="PointLight2D" type="PointLight2D" parent="."]
energy = 0.3
texture = ExtResource("3_wr5l3")

[node name="m_714" parent="." instance=ExtResource("4_n12sp")]

[node name="weapon_manager" type="Node" parent="."]
script = ExtResource("5_dry04")

[node name="hitboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("6_2322e")]
collision_layer = 1
health_component = NodePath("../health_component")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="hitboxComponent"]
position = Vector2(1, 0)
shape = SubResource("RectangleShape2D_nefqh")

[node name="health_component" parent="." instance=ExtResource("7_a2ic5")]
max_health = 3

[node name="heart_bar" type="CanvasLayer" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="heart_bar"]
offset_right = 40.0
offset_bottom = 40.0

[node name="heart" type="TextureRect" parent="heart_bar/HBoxContainer"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2

[node name="heart" parent="heart_bar/HBoxContainer/heart" instance=ExtResource("8_qthg5")]

[node name="heart2" type="TextureRect" parent="heart_bar/HBoxContainer"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2

[node name="heart" parent="heart_bar/HBoxContainer/heart2" instance=ExtResource("8_qthg5")]

[node name="heart3" type="TextureRect" parent="heart_bar/HBoxContainer"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2

[node name="heart" parent="heart_bar/HBoxContainer/heart3" instance=ExtResource("8_qthg5")]

[connection signal="health_changed" from="health_component" to="." method="_on_health_component_health_changed"]
